--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-article img{
-    width: 200px;
+main {
+  margin: auto;
+  padding: 0px;
+}
+article img {
+  width: 100%;
+  max-width: 200px;
+}
+section img {
+    width: 100%;
+  max-width: 500px;
 }
